[package]
name = "dodgefireball_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
rand = "0.8.5"
bevy_rapier2d = { version = "0.26.0", features = [ "simd-stable", "parallel" ] }
blake3 = { version = "1.5.1", features = ["pure"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
bevy_pkv = "0.10.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
name = "dodge_fire_ball"
path = "src/lib.rs"
crate-type = [
    "staticlib",
    "cdylib",    # needed for Android
    "rlib",      # rlib needed for running locally
]

[[bin]]
name = "dodge_fire_ball"
path = "src/main.rs"

[package.metadata.android]
package = "com.simomaster1.DodgeFireBall"
apk_name = "DodgeFireBall"
strip = "strip"
# see https://github.com/rust-mobile/cargo-apk
assets = "assets"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
label = "DodgeFireBall"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_MEDIA_STORAGE"

# This is for quick testing, used for debug builds
# [package.metadata.android.signing.release]
# path = "~/.android/debug.keystore"
# keystore_password = "android"